he is the person in charge of the merges. To identify the developer responsible
for a given patch, see the "new patches" section of each log.

____________________________________________________________________
** CHANGES ALONG ref@bsc--2007/siesta-bsc--master--2.1
--------------------------------------------------------------------

2007-03-01 12:00:53 GMT	Alberto Garcia <albertog@icmab.es>	patch-19

Summary: Add character(len=*) routines to alloc.F90

New module procedures realloc_s1 and dealloc_s1


2007-02-27 15:46:53 GMT	Alberto Garcia <albertog@icmab.es>	patch-18

Summary: Final cleanup of siesta_todo
Keywords: 

(During and after meeting at BSC on Feb 26, 2007)

* New module m_gamma.
* 'shape' put in siesta_geom.
* 'sname' put in siesta_options.
* Signaling role of 'foundxv' taken over by 'xv_file_read' in ioxv.F

* All the other variables have been made local to the appropriate routines.

+ Cosmetic changes in state_init and hsparse: conversion of implicit
  loops with goto to explicit 'do while' loops.

+ Conversion of scfconvergence_test and proximity_check into modules.


2007-02-25 22:25:53 GMT	Alberto Garcia <albertog@icmab.es>	patch-17

Summary: Fixes for troublesome bugs in reference code

Patches applied:

 * siesta@uam.es--2006/siesta-devel--reference--2.1--patch-31
   Parallel bug fix and cleanup in writewave.F

 * siesta@uam.es--2006/siesta-devel--reference--2.1--patch-42
   zval wrongly treated as MPI_integer in broadcast_basis

 * siesta@uam.es--2006/siesta-devel--reference--2.1--patch-43
   Wrap io_close for MPI in iohs.F

 * siesta@uam.es--2006/siesta-devel--reference--2.1--patch-45
   Clean up handling of ntote in ksv and optical

 * siesta@uam.es--2006/siesta-devel--reference--2.1--patch-46
   Fix allocation of temporary array in savepsi in parallel



2007-02-25 20:02:53 GMT	Alberto Garcia <albertog@icmab.es>	patch-16

Summary: Merge of removal of integer and real variables from siesta_todo
Keywords: 
